--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     depends_on:
       - backend
     environment:
-      - REACT_APP_API_URL=/api
+      - REACT_APP_API_URL=http://backend:8000
     restart: unless-stopped
 
 volumes:
