--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -5,14 +5,12 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    # Serve React app for all non-API requests
     location / {
         try_files $uri /index.html;
     }
 
-    # Proxy API requests to backend
     location /api/ {
-        proxy_pass https://<YOUR_BACKEND_RENDER_URL>/;  # Use full backend URL
+        proxy_pass https://<YOUR_BACKEND_RENDER_URL>/;  # Replace with your deployed backend URL
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
