--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,4 @@
-# Stage 1: Build React app
+# Stage 1: Build frontend
 FROM node:18-alpine AS build
 
 WORKDIR /app
@@ -6,15 +6,15 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
-RUN npm run build
+RUN npm run build   # Vite will output to /app/dist
 
 # Stage 2: Serve with Nginx
 FROM nginx:alpine
 
-# Copy React build to Nginx
-COPY --from=build /app/build /usr/share/nginx/html
+# Copy Vite build folder
+COPY --from=build /app/dist /usr/share/nginx/html
 
-# Copy custom Nginx config
+# Copy Nginx config
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
